[gd_scene load_steps=8 format=3 uid="uid://bg2p624pss2ie"]

[ext_resource type="Script" uid="uid://duxmjyv48c5de" path="res://UI/LevelSelect/level_select.gd" id="1_8itbj"]
[ext_resource type="Texture2D" uid="uid://qf5wlt1eqfb3" path="res://UI/LevelSelect/1.png" id="2_fvgb5"]
[ext_resource type="Texture2D" uid="uid://d3l8nkl86gdlb" path="res://UI/LevelSelect/2.png" id="3_tnpda"]
[ext_resource type="Texture2D" uid="uid://bsinqhlkkao3h" path="res://UI/LevelSelect/3.png" id="4_2tfq3"]
[ext_resource type="Texture2D" uid="uid://cc3ugln1l5op1" path="res://UI/LevelSelect/4.png" id="5_ovkvc"]
[ext_resource type="PackedScene" uid="uid://keo01h3sk8tx" path="res://UI/Elements/Button.tscn" id="6_2tfq3"]
[ext_resource type="AudioStream" uid="uid://bp0bkg6awnq5q" path="res://UI/Elements/click.wav" id="7_ovkvc"]

[node name="LevelSelect" type="Control" node_paths=PackedStringArray("levels_container")]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8itbj")
levels_container = NodePath("MarginContainer/LevelsContainer")

[node name="Background1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fvgb5")
stretch_mode = 6

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tnpda")
stretch_mode = 6

[node name="Background3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_2tfq3")
stretch_mode = 6

[node name="Background4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ovkvc")
stretch_mode = 6

[node name="BackButton" parent="." instance=ExtResource("6_2tfq3")]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 0.0
grow_vertical = 0
text = "Back"

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ovkvc")
volume_db = -18.179

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 0

[node name="LevelsContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
